--- a/q104-maximum-depth-of-binary-tree/Cargo.toml
+++ b/q104-maximum-depth-of-binary-tree/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "leetcode_utils"
+name = "q104-maximum-depth-of-binary-tree"
 version = "0.1.0"
-authors = ["dimos"]
+authors = ["Dimos Double <doubledimos@outlook.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-
-[lib]
-name = "leetcode_utils"
-path = "src/lib.rs"
+leetcode_utils = { path = "../leetcode_utils" }
