--- a/q116-populating-next-right-pointers-in-each-node/Cargo.toml
+++ b/q116-populating-next-right-pointers-in-each-node/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "leetcode_utils"
+name = "q116-populating-next-right-pointers-in-each-node"
 version = "0.1.0"
-authors = ["dimos"]
+authors = ["Dimos Double <doubledimos@outlook.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-
-[lib]
-name = "leetcode_utils"
-path = "src/lib.rs"
